# TDS-gemini-LLMquiz

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  agent.py  main.py  pyproject.toml  requirements.txt  test_endpoint.py
tools/: __init__.py  add_dependencies.py  code_generate_and_run.py  download_file.py  send_request.py  web_scraper.py
